--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,13 @@
 
     <ul id="events"></ul>
 
+    <form method="POST" action="@routes.Application.addUser()">
+        <input type="text" name="nickname"/>
+        <button>Add Event</button>
+    </form>
+
     <form method="POST" action="@routes.Application.addEvent()">
+        <input type="text" name="nickname"/>
         <input type="text" name="name"/>
         <button>Add Event</button>
     </form>
