--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,7 +11,7 @@
     </form>
 
     <form method="POST" action="@routes.Application.addEvent()">
-        <input type="text" name="nickname"/>
+        <input type="text" name="username"/>
         <input type="text" name="name"/>
         <button>Add Event</button>
     </form>
