--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,11 +3,38 @@
 @main("EventUs - events for us") {
 
     <script>
+        var recoveredName;
+        var recoveredId;
+        function post(path, params, method) {
+            method = method || "post"; // Set method to post by default if not specified.
+
+            // The rest of this code assumes you are not using a library.
+            // It can be made less wordy if you use one.
+            var form = document.createElement("form");
+            form.setAttribute("method", method);
+            form.setAttribute("action", path);
+
+            for(var key in params) {
+                if(params.hasOwnProperty(key)) {
+                    var hiddenField = document.createElement("input");
+                    hiddenField.setAttribute("type", "hidden");
+                    hiddenField.setAttribute("name", key);
+                    hiddenField.setAttribute("value", params[key]);
+
+                    form.appendChild(hiddenField);
+                 }
+            }
+
+            document.body.appendChild(form);
+            form.submit();
+        }
+
+
       function statusChangeCallback(response) {
         console.log('statusChangeCallback');
         console.log(response);
         if (response.status === 'connected') {
-          testAPI();
+            testAPI();
         } else if (response.status === 'not_authorized') {
           document.getElementById('status').innerHTML = 'Please log ' +
             'into this app.';
@@ -21,15 +48,15 @@
         FB.getLoginStatus(function(response) {
           statusChangeCallback(response);
         });
+
       }
 
       window.fbAsyncInit = function() {
       FB.init({
         appId      : '1860962844129074',
-        cookie     : true,  // enable cookies to allow the server to access
-                            // the session
-        xfbml      : true,  // parse social plugins on this page
-        version    : 'v2.3' // use version 2.2
+        cookie     : true,
+        xfbml      : true,
+        version    : 'v2.3'
       });
 
       FB.getLoginStatus(function(response) {
@@ -48,11 +75,22 @@
       function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', function(response) {
+          console.log(JSON.stringify(response));
           console.log('Successful login for: ' + response.name);
           document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.name + '!';
+            recoveredName = response.name;
+            recoveredId = response.id;
+
         });
       }
+
+      function proceed(){
+        if (recoveredName != null){
+          post('/user', {name: recoveredName + "#" + recoveredId});
+        }
+      }
+
     </script>
 
     <fb:login-button scope="public_profile" onlogin="checkLoginState();">
@@ -65,6 +103,8 @@
         data-show-faces="true">
     </div>
 
+    <button type="button" onclick="proceed();">Register Facebook User</button>
+
 
     <div id="status">
     </div>
@@ -74,7 +114,7 @@
     <ul id="events"></ul>
 
     <form method="POST" action="@routes.Application.addUser()">
-        <input type="text" name="nickname"/>
+        <input type="text" name="name"/>
         <button>Add User</button>
     </form>
 
