--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -114,7 +114,8 @@
     <ul id="events"></ul>
 
     <form method="POST" action="@routes.Application.addUser()">
-        <input type="text" name="name"/>
+        <input type="text" name="email" placeholder="Email address"/>
+        <input type="text" name="name" placeholder="Name"/>
         <button>Add User</button>
     </form>
 
@@ -122,6 +123,7 @@
         <input type="text" name="name"/>
         <button>Add Event</button>
     </form>
+
     <form method="POST" action="@routes.Application.postComment()">
         <input type="text" name="contents"/>
         <input type="text" name="eventId"/>
