--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -129,6 +129,7 @@
     <form method="POST" action="@routes.Application.addEvent()">
         <input type="text" name="name" placeholder="Event Name"/>
         <input type="text" name="description" placeholder="Event Description"/>
+        <input type="text" name="hashtag" placeholder="Hashtag"/>
         <button>Add Event</button>
     </form>
 
@@ -147,6 +148,11 @@
     <form method="POST" action="@routes.Application.decreaseScore()">
         <input type="text" name="id" placeholder="Comment id"/>
         <button>Deprops Comment</button>
+    </form>
+
+    <form method="POST" action="@routes.Application.getTweetsByHashtag()">
+        <input type="text" name="id" placeholder="Event id"/>
+        <button>Get Tweets</button>
     </form>
 
     <form action="/events">
