--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -116,7 +116,7 @@
     <ul id="events"></ul>
 
     <form method="POST" action="@routes.Application.login()">
-        <input type="text" name="email"/>
+        <input type="text" name="email" placeholder="Login"/>
         <button>Login</button>
     </form>
 
