Human way to get tweets

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -150,10 +150,10 @@
         <button>Deprops Comment</button>
     </form>
 
-    <form method="POST" action="@routes.Application.getTweetsByHashtag()">
-        <input type="text" name="id" placeholder="Event id" required pattern="[0-9]+"/>
-        <button>Get Tweets</button>
-    </form>
+    <!--<form method="POST" action="@routes.Application.getTweetsByHashtag("asdasd")">-->
+        <!--<input type="text" name="id" placeholder="Event id" required pattern="[0-9]+"/>-->
+        <!--<button>Get Tweets</button>-->
+    <!--</form>-->
 
     <form action="/events">
         <button>Events</button>
